# procugents

./: .env.example  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  ruff.toml  ty.toml
docs/: a2a-integration.md  agent-prompts.md  data-schema-detail.md  legal-rule-engine.md  legal_rule_engine.json  mcp-server-specs.md  portfolio-alignment.md  procurement_schema.sql
src/api/: main.py
src/orchestration/: orchestrator.py
src/scripts/: auto_crawl.py
src/servers/: a2a_server.py
src/servers/mcp/: alert.py  legal_lookup.py  orchestrator_mcp.py  philgeps_data.py  philgeps_scraper.py  price_analysis.py
src/services/: cache.py  database.py
tests/: test_orchestrator.py
web/: pnpm-lock.yaml  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/analyses/: route.ts
web/src/app/api/analyses/[id]/: route.ts
web/src/app/api/analyze/: route.ts
web/src/app/api/crawl/: route.ts
web/src/app/api/stats/: route.ts
web/src/app/contracts/[id]/: page.tsx
